--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@actions/github": "^5.0.0",
     "@actions/tool-cache": "^1.7.1",
     "@octokit/plugin-retry": "^3.0.9",
-    "@octokit/plugin-throttling": "^3.5.1"
+    "@octokit/plugin-throttling": "^3.5.1",
+    "got": "^11.8.3"
   },
   "devDependencies": {
     "@octokit/rest": "^18.12.0",
