--- a/action.yml
+++ b/action.yml
@@ -13,18 +13,24 @@ inputs:
   github-token:
     description: "GitHub token with release asset access to hc-releases."
     required: true
-  version:
-    description: "Version of hc-releases to install."
-    required: false
-    default: "0.1.15"
-  version-checksum:
-    description: "Platform and version checksum of hc-releases to verify."
-    required: false
+  tag:
+    description: "Tag of release to install, e.g. v0.1.10."
+    default: "v0.1.15"
+  install-dir:
+    description: "Where the tool will be installed; this directory will be added to GITHUB_PATH."
+    default: "$HOME/bin"
 
 outputs:
   version:
-    description: "Version of hc-releases installed."
+    description: "The version of hc-releases that was installed as reported by the tool"
+    value: ${{ steps.install.outputs.version }}
 
 runs:
-  using: "node12"
-  main: "dist/index.js"
+  using: composite
+  steps:
+    - name: Install hc-releases tool
+      id: install
+      shell: bash
+      env:
+        GH_TOKEN: ${{ inputs.github-token }}
+      run: DEST_DIR="${HOME}/bin" ./scripts/setup-hc-releases.sh "${{ inputs.tag }}"
