Remove extant downloaded assets before download
If actions/setup-hc-releases is run multiple times in a single job,
the asset and checksums file will still be present and cause subsequent
invocations of actions/setup-hc-releases to fail.

The `gh` option `--clobber` is not available on all runners, so
explicitly remove the files instead.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,3 +84,10 @@ jobs:
           echo "Incorrect hc-releases found (wrong version installed?  target version not first in PATH?)" 1>&2
           exit 1
         fi
+
+    # test that a single job can call the action multiple times
+    - name: Install hc-releases again
+      uses: ./
+      with:
+        github-token: ${{ inputs.github-token || secrets.TOKEN_DOWNLOAD_RELAPI }}
+        version: ${{ matrix.version }}
