Update CODEOWNERS for SMRE
This facilitates GH automatically selecting appropriate PR reviewers
and team discovery through Heimdall.

[skip ci]

--- a/META.d/_summary.yaml
+++ b/META.d/_summary.yaml
@@ -3,8 +3,10 @@
 
 ---
 schema: 1.1
+partition: release-engineering
+category: github-action
 summary:
-  owner: team-rel-eng
+  owner: team-selfmanaged-releng
   description: |
     setup-hc-releases is a GitHub action used to install `hc-releases`, the CLI
     component of the Releases API Service.
